# a9z

./: .env.daedalos.example  .flake8  .gitignore  AUTOGNOSIS_IMPLEMENTATION.md  BUILD.md  COGZERO_README.md  DAEDALOS_DEPLOYMENT_GUIDE.md  DAEDALOS_INTEGRATION.md  Dockerfile.full  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.md  agent.py  docker-compose.daedalos.yml  docker-compose.yml  netlify.toml  pyproject.toml  pytest.ini  requirements.txt  run_avatar_api.py  run_toga.py  setup.py  test_autognosis.py  test_opencog.py  vercel.json
.github/: copilot-instructions.md
.github/agents/: HOLISTIC_METAMODEL.md  agent-zero-hck.md
.github/workflows/: README.md  build.yml  deploy.yml
agents/toga_hck/: __init__.py  agent.py  agent_integrated.py  config.py
daedalos-integration/: Dockerfile  main.py  requirements.txt
daedalos-integration/api/: __init__.py  routes.py  server.py
daedalos-integration/filesystem/: __init__.py  adapter.py  manager.py
daedalos-integration/websocket/: __init__.py  handlers.py  manager.py
docker/run/: build.txt
docs/: AGENT_ZERO_INTEGRATION.md  AVATAR_API_DESIGN.md  README.md  autognosis.md  toga_gui.md
docs/virtual_hardware/: IMPLEMENTATION_SUMMARY.md  README.md
environments/: .gitignore  README.md  deploy.sh  docker-compose.yml
environments/daedalos/: toga.config.js
environments/webvm/: Dockerfile.toga  LIVE2D_INTEGRATION.md  svelte.config.js  toga.config.js  wrangler.toml
examples/opencog_atoms/: 01_basic_agent_atoms.py  05_self_referential_atoms.py  06_complex_agent_atoms.py  ATOM_TYPES_REFERENCE.md  INDEX.md  README.md  run_all_examples.py
prompts/: agent.system.main.role.md  agent.system.tool.code_exe.md
prompts/default/: agent.system.tool.autognosis.md  agent.system.tool.opencog.md  agent.system.tools.md
python/api/: __init__.py  csrf_token.py
python/gui/: __init__.py  agent_toga.py  toga_personality.py
python/helpers/: opencog_atomspace.py  toga_personality.py  toga_security.py  toga_transform.py
python/tools/: autognosis.py  browser_agent.py  opencog.py
scripts/: deploy-daedalos.sh
tests/: __init__.py  conftest.py  test_avatar_api.py  test_basic.py  test_integration.py  test_toga_gui.py
web/avatar/: README.md  index.html  package.json  tsconfig.json  (+1 more)
webui/: index.css
(+69 files in other folders)
